Refactor to make it Java 11 compatible